--- a/styles.css
+++ b/styles.css
@@ -1,60 +1,41 @@
 #grid {
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr;
-  grid-template-rows: repeat(5, 100px);
-  gap: 10px;
-
+  grid-template-rows: 124px 124px 124px 124px 124px;
+  grid-template-columns: 242.5px 242.5px 242.5px 242.5px;
+  grid-gap: 10px;
+ 
   padding: 10px;
 }
 
-.item {
+/* common item style */
+#grid > div {
   background-color: green;
   color: white;
+  border: 2px solid white;
   font-size: 24px;
   display: flex;
   align-items: center;
   padding-left: 10px;
-  border: 1px solid white;
 }
 
-/* Layout positioning */
-.i1 {
-  grid-column: 1 / 5;
-	
+/* grid placement — MUST USE span */
+#grid > div:nth-child(1) {
+  grid-column: span 4;
 }
 
-.i2 {
-  grid-row: 2 / 6;
+#grid > div:nth-child(2) {
+  grid-row: span 4;
 }
 
-.i3 {
-  grid-column: 2 / 3;
+#grid > div:nth-child(4) {
+  grid-column: span 2;
 }
 
-.i4 {
-  grid-column: 3 / 5;
+#grid > div:nth-child(5) {
+  grid-column: span 2;
 }
 
-.i5 {
-  grid-column: 2 / 4;
+#grid > div:nth-child(10) {
+  grid-column: span 3;
 }
 
-.i6 {
-  grid-column: 4 / 5;
-}
-
-.i7 {
-  grid-column: 2 / 3;
-}
-
-.i8 {
-  grid-column: 3 / 4;
-}
-
-.i9 {
-  grid-column: 4 / 5;
-}
-
-.i10 {
-  grid-column: 2 / 5;
-}
